src/objects/Budget_vs_Actuals__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budget vs Actuals</relationshipLabel>
        <relationshipName>Budget_vs_Actuals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Identifier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Budget_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Budget Locked ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <label>Budget vs Actuals</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Budget vs Actuals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget vs Actuals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Access_Set__c</fullName>
        <label>Access Set</label>
    </sharingReasons>
    <validationRules>
        <fullName>RestrictBudgetvsActualsCreate</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISNEW() || ISCHANGED(Year__c)
) &amp;&amp;
IF((VALUE( TEXT( Year__c ) ) &gt; YEAR( TODAY() )+2) ||(VALUE( TEXT( Year__c ) ) &lt; YEAR( TODAY() )-2) , true, false)</errorConditionFormula>
        <errorMessage>BudgetVsActuals cannot be created for more/less than 2 years from the current year.</errorMessage>
    </validationRules>
</CustomObject>